# hireloop1

./: .cursorrules  .gitignore  .railwayignore  AGENTS.md  BACKEND_IMPROVEMENT_PLAN.md  BOSS_UPDATE_JUN15.md  CLAUDE.md  DEMO_RUNBOOK.md  DESIGN.md  DESIGN_MIGRATION.md  HIRELOOP_MVP.md  Hireloop_Overview.pptx  KEYS_AND_UNLOCKS.md  LOCAL_TESTING.md  PHASE_TRACKER.md  README.md  SUPABASE_CLOUD_SETUP.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
api/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.json  railway.toml  railway.ts  ruff.toml
api/.railway/: config.json  railway.ts
api/scripts/: backfill_current_title.py  backfill_demo_candidate_profiles.py  backfill_job_embeddings.py  backfill_linkedin_profiles.py  bootstrap_integration_db.py  build_skills_vocab.py  check_apply_links.py  e2e_smoke.py  embed_all.py  enrich_jobs.py  expire_stale_jobs.py  ingest_ats.py  purge_all_users.py  purge_except_email.py  recompute_matches.py  run_ingest.py  seed_hm_invite_test.py  seed_marketplace_demo.py  seed_rupesh_test_jobs.py  seed_sample_jobs.py  seed_test_users.py  smoke_email.py  smoke_firecrawl.sh  smoke_full_candidate_flow.sh  smoke_perf_onboarding.sh  smoke_railway.sh
api/tests/: pool_shim.py  test_aarya_agent_context.py  test_aarya_auto_ingest.py  test_aarya_auto_ingest_progress.py  test_aarya_chit_chat.py  test_aarya_hinglish.py  test_aarya_job_search_sql.py  test_aarya_model_routing.py  test_aarya_update_preferences.py  test_aarya_voice_interview_mode.py  test_admin_background_jobs.py  test_ai_context.py  test_ai_operation_routes.py  test_ai_operations.py  test_apify_linkedin_profile.py  test_apify_market_config.py  test_application_intelligence.py  test_application_kit_guardrails.py  test_application_kit_profile_enrichment.py  test_application_kit_routes.py  test_ats_source.py  test_auth_otp_provider.py  test_auth_phone_gate.py  test_background_jobs.py  test_bootstrap_roles.py  test_candidate_bootstrap.py  test_candidate_intelligence.py  (+129 more)
(+700 files in other folders)
